--- a/indrx.html
+++ b/indrx.html
@@ -1,38 +1,41 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Магия вкуса в каждой крошке - наше премиальное печенье с ароматным натуральным маслом, свежими сливками, чистым медом и отборной мукой.">
+  <meta name="keywords" content="печенье, премиальное, натуральное масло, свежие сливки, чистый мед, отборная мука, заказать, кулинарное наслаждение">
   <link rel="stylesheet" href="styles.css">
-  <title>Maket</title>
-  
+  <title>Магия вкуса в каждой крошке - Премиальное печенье</title>
 </head>
 <body>
-        <header class="header">
-            <div class="container"> 
-                <div class="logo">
-                    <img src="images/logo.png" alt="Logo"></a>
-                  </div>
-            <nav class="menu">
-                <ul>
-                    <li><a href="#">Каталог</a></li>
-                    <li><a href="#">О нас</a></li>
-                    <li><a href="#">Оформление заказа</a></li>
-                </ul>
-            </nav>
-            <div>
-        </header>
+  <header class="header">
+    <div class="header_container"> 
+      <div class="logo">
+        <img src="images/logo.png" alt="Логотип премиального печенья">
+      </div>
+      <nav class="menu">
+        <ul>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">О нас</a></li>
+          <li><a href="#">Оформление заказа</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-        <section class="hero">
-            <div class="container">
-                <div class="main_info">
-                    <h1 class="title">Магия вкуса  каждой крошке</h1>
-                    <p class="main-text">Наши рецепты вдыхают жизнь в изысканность ингредиентов: ароматное натуральное масло, свежие сливки, чистый мёд и отборная мука. Мы тщательно отбираем каждый компонент премиального печенья, стремясь подарить вам истинное кулинарное наслаждение..</p>
-                   </div>
-                   <div class="main_action">
-                       <button class="button">Заказать</button>
-                   </div>
-                   <img src="./images/cookie.png" alt="cookie" class="main-image">
-            </div>
-        </section>
+  <main class="main">
+    <section class="hero">
+      <div class="main_container">
+        <div class="main_info">
+          <h1 class="title">Магия вкуса в каждой крошке</h1>
+          <p class="main_text">Наши рецепты вдыхают жизнь в изысканность ингредиентов: ароматное натуральное масло, свежие сливки, чистый мёд и отборная мука. Мы тщательно отбираем каждый компонент премиального печенья, стремясь подарить вам истинное кулинарное наслаждение..</p>
+        </div>
+        <div class="main_action">
+          <button class="button">Заказать</button>
+        </div>
+        <img src="./images/cookie.png" alt="Изображение печенья с различными вкусами и ароматами" class="main_image">
+      </div>
+    </section>
+  </main>
 </body>
 </html>
