--- a/indrx.html
+++ b/indrx.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Магия вкуса в каждой крошке - наше премиальное печенье с ароматным натуральным маслом, свежими сливками, чистым медом и отборной мукой.">
@@ -27,7 +27,7 @@
     <section class="hero">
       <div class="main_container">
         <div class="main_info">
-          <h1 class="title">Магия вкуса в каждой крошке</h1>
+          <h1 class="title">Магия вкуса <br>в каждой крошке</h1>
           <p class="main_text">Наши рецепты вдыхают жизнь в изысканность ингредиентов: ароматное натуральное масло, свежие сливки, чистый мёд и отборная мука. Мы тщательно отбираем каждый компонент премиального печенья, стремясь подарить вам истинное кулинарное наслаждение..</p>
         </div>
         <div class="main_action">
@@ -36,6 +36,170 @@
         <img src="./images/cookie.png" alt="Изображение печенья с различными вкусами и ароматами" class="main_image">
       </div>
     </section>
+
+
+    <section class="products">
+      <div class="products-container">
+        <h2 class="common-title">Выберите печенье</h2>
+        <div class="products-items">
+             <div class="products-item">
+            <div class="products-item-image">
+              <img src="./images/1.png" alt="Лучшие друзья печенье">
+            </div>
+            <div class="products-item-details">
+              <h3 class="products-item-title">Лучшие друзья</h3>
+              <p class="products-item-text">Печенье, с которого все началось! Наше фирменное печенье с шоколадной крошкой и грецкими орехами хрустящее снаружи с достаточно толстой и липкой серединкой.</p>
+              <div class="products-item-extra">
+                <div class="products-item-info">
+                  <div class="products-item-price">20 $</div>
+                  <div class="products-item-weight">2 шт./ 200 гр.</div>
+                </div>
+                <button class="order-button">Заказать</button>
+              </div>
+            </div>
+             </div>
+
+             <div class="products-item">
+              <div class="products-item-image">
+                <img src="./images/2.png" alt="Лучшие друзья печенье">
+              </div>
+              <div class="products-item-details">
+                <h3 class="products-item-title">Шоколадный француз</h3>
+                <p class="products-item-text">Это печенье, изготовленное из тёмного французского какао и полусладкой шоколадной стружки, наверняка удовлетворит даже самого заядлого любителя шоколада.
+                </p>
+                <div class="products-item-extra">
+                  <div class="products-item-info">
+                    <div class="products-item-price">24 $</div>
+                    <div class="products-item-weight">2 шт./ 200 гр.</div>
+                  </div>
+                  <button class="order-button">Заказать</button>
+                </div>
+              </div>
+             </div>
+
+             <div class="products-item">
+                <div class="products-item-image">
+                  <img src="./images/3.png" alt="Лучшие друзья печенье">
+                </div>
+                <div class="products-item-details">
+                  <h3 class="products-item-title">Овсянка с изюмом, Сэр!</h3>
+                  <p class="products-item-text">Это сдобное маслянистое печенье весом шесть унций каждое, золотисто-коричневое снаружи, влажное внутри и наполненное пухлым сладким изюмом.</p>
+                  <div class="products-item-extra">
+                    <div class="products-item-info">
+                      <div class="products-item-price">18 $</div>
+                      <div class="products-item-weight">2 шт./ 200 гр.</div>
+                    </div>
+                    <button class="order-button">Заказать</button>
+                  </div>
+                </div>
+             </div>
+
+             <div class="products-item">
+                  <div class="products-item-image">
+                    <img src="./images/4.png" alt="Лучшие друзья печенье">
+                  </div>
+                  <div class="products-item-details">
+                    <h3 class="products-item-title">Шоколадное наслаждение</h3>
+                    <p class="products-item-text">Печенье, с которого все началось! Наше фирменное печенье с шоколадной крошкой и грецкими орехами хрустящее снаружи с достаточно толстой и липкой серединкой.</p>
+                    <div class="products-item-extra">
+                      <div class="products-item-info">
+                        <div class="products-item-price">24 $</div>
+                        <div class="products-item-weight">2 шт./ 200 гр.</div>
+                      </div>
+                      <button class="order-button">Заказать</button>
+                    </div>
+                  </div>
+             </div>
+
+             <div class="products-item">
+                    <div class="products-item-image">
+                      <img src="./images/5.png" alt="Лучшие друзья печенье">
+                    </div>
+                    <div class="products-item-details">
+                      <h3 class="products-item-title">Арахисовый рай</h3>
+                      <p class="products-item-text"> Сладкое, пикантное и идеально сбалансированное печенье удовлетворяет тягу любителей арахисового масла и шоколада.</p>
+                      <div class="products-item-extra">
+                        <div class="products-item-info">
+                          <div class="products-item-price">20 $</div>
+                          <div class="products-item-weight">2 шт./ 200 гр.</div>
+                        </div>
+                        <button class="order-button">Заказать</button>
+                      </div>
+                    </div>
+             </div>
+
+             <div class="products-item">
+                      <div class="products-item-image">
+                        <img src="./images/6.png" alt="Лучшие друзья печенье">
+                      </div>
+                      <div class="products-item-details">
+                        <h3 class="products-item-title">Шоколадный ореховый деликатес</h3>
+                        <p class="products-item-text">Наша фирменная рецептура печенья с шоколадными крошками и грецкими орехами гарантирует незабываемый вкусовой опыт. Каждое печенье хрустит снаружи, но раскрывает внутри нежную сердцевину.</p>
+                        <div class="products-item-extra">
+                          <div class="products-item-info">
+                            <div class="products-item-price">18 $</div>
+                            <div class="products-item-weight">2 шт./ 200 гр.</div>
+                          </div>
+                          <button class="order-button">Заказать</button>
+                        </div>
+                      </div>
+             </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="products-love">
+        <div class="products-container">
+          <h2  class="common-title"> Пекарня с любовью</h2>
+          <div class="products-love-items">
+            <div class="products-item-white">
+              <h3 class="products-love-item-title">Приготовлено с заботой, чтобы радовать вас каждый день</h3>
+              <p class="products-item-text">Приготовлено с заботой, чтобы радовать вас каждый день
+                Мы с гордостью представляем наше печенье, которое мы выпекаем вручную каждый день с 1995 года, используя только лучшие ингредиенты. Погрузитесь в мир изысканных лакомств, приготовленных с применением передовых технологий, и насладитесь их неповторимым вкусом.</p>
+            </div>
+            <div "products-item-image">
+              <img src="./images/love.png" alt="love">
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <section class="products-formit">
+      <div class="products-order">
+        <h2 class="common-title">Оформить заказ</h2>
+        <img src="./images/breadcrumbs.png" alt="breadcrumbs" class="breadcrumbs-bg">
+        <div class="formit">
+          <form class="formit-action" action="/submit" method="post">
+            <p class="oder-form_text">
+              Откройте для себя волшебство вкуса с нашим премиальным печеньем! Закажите прямо сейчас и окунитесь в мир сладких наслаждений. 
+            </p>
+            <select class="name-product" name="product" id="product">
+              <option value="chocolate_oreo">Шоколадный ореховый деликатес</option>
+              <option value="best_friends">Лучшие друзья</option>
+              <option value="french_chocolate">Шоколадный француз</option>
+              <option value="oatmeal_with_raisins">Овсянка с изюмом, Сэр!</option>
+              <option value="chocolate_indulgence">Шоколадное наслаждение</option>
+              <option value="peanut_butter_paradise">Арахисовый рай</option>
+            </select>
+            <input type="text" name="name" id="name" required placeholder="Введите ваше имя">
+            <input type="tel" name="phone" id="phone" required placeholder="Введите ваш номер телефона">
+            <button type="submit">Оформить заказ</button>
+          </form>
+          <img src="./images/order.png" alt="love" class="main_images_oder">
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer">
+        <div class="footer-logo">
+          <img src="./images/logo.png" alt="Логотип премиального печенья">
+        </div>
+        <div class="footer-text">
+          <span>«Все права защищены»</span>
+        </div>
+      </div>
+    </footer>
   </main>
 </body>
 </html>
