--- a/indrx.html
+++ b/indrx.html
@@ -26,6 +26,7 @@
   <main class="main">
     <section class="hero">
       <div class="main_container">
+        <img src="images/line1.png" alt="line" class="line1">
         <div class="main_info">
           <h1 class="title">Магия вкуса <br>в каждой крошке</h1>
           <p class="main_text">Наши рецепты вдыхают жизнь в изысканность ингредиентов: ароматное натуральное масло, свежие сливки, чистый мёд и отборная мука. Мы тщательно отбираем каждый компонент премиального печенья, стремясь подарить вам истинное кулинарное наслаждение..</p>
@@ -40,6 +41,7 @@
 
     <section class="products">
       <div class="products-container">
+        <img src="images/line2.png" alt="line"  class="line2">
         <h2 class="common-title">Выберите печенье</h2>
         <div class="products-items">
              <div class="products-item">
@@ -166,6 +168,7 @@
     </section>
 
     <section class="products-formit">
+      <img src="./images/line3.png" alt="line"  class="line3">
       <div class="products-order">
         <h2 class="common-title">Оформить заказ</h2>
         <img src="./images/breadcrumbs.png" alt="breadcrumbs" class="breadcrumbs-bg">
