--- a/indrx.html
+++ b/indrx.html
@@ -14,17 +14,19 @@
         <img src="images/logo.png" alt="Логотип премиального печенья">
       </div>
       <nav class="menu">
-        <ul>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">О нас</a></li>
-          <li><a href="#">Оформление заказа</a></li>
-        </ul>
+        <nav class="menu">
+          <ul>
+            <li><a href="#products">Каталог</a></li>
+            <li><a href="#products-love">О нас</a></li>
+            <li><a href="#products-formit">Оформление заказа</a></li>
+          </ul>
+        </nav>
       </nav>
     </div>
   </header>
-
+  
   <main class="main">
-    <section class="hero">
+    <section class="hero" id="hero">
       <div class="main_container">
         <img src="images/line1.png" alt="line" class="line1">
         <div class="main_info">
@@ -32,14 +34,14 @@
           <p class="main_text">Наши рецепты вдыхают жизнь в изысканность ингредиентов: ароматное натуральное масло, свежие сливки, чистый мёд и отборная мука. Мы тщательно отбираем каждый компонент премиального печенья, стремясь подарить вам истинное кулинарное наслаждение..</p>
         </div>
         <div class="main_action">
-          <button class="button">Заказать</button>
+          <button class="button"  href="#products-formit" >Заказать</button>
         </div>
         <img src="./images/cookie.png" alt="Изображение печенья с различными вкусами и ароматами" class="main_image">
       </div>
     </section>
 
 
-    <section class="products">
+    <section class="products" id="products">
       <div class="products-container">
         <img src="images/line2.png" alt="line"  class="line2">
         <h2 class="common-title">Выберите печенье</h2>
@@ -56,7 +58,7 @@
                   <div class="products-item-price">20 $</div>
                   <div class="products-item-weight">2 шт./ 200 гр.</div>
                 </div>
-                <button class="order-button">Заказать</button>
+                <button class="order-button" href="#products-formit" >Заказать</button>
               </div>
             </div>
              </div>
@@ -74,7 +76,7 @@
                     <div class="products-item-price">24 $</div>
                     <div class="products-item-weight">2 шт./ 200 гр.</div>
                   </div>
-                  <button class="order-button">Заказать</button>
+                  <button class="order-button"  href="#products-formit" >Заказать</button>
                 </div>
               </div>
              </div>
@@ -91,7 +93,7 @@
                       <div class="products-item-price">18 $</div>
                       <div class="products-item-weight">2 шт./ 200 гр.</div>
                     </div>
-                    <button class="order-button">Заказать</button>
+                    <button class="order-button"  href="#products-formit" >Заказать</button>
                   </div>
                 </div>
              </div>
@@ -108,7 +110,7 @@
                         <div class="products-item-price">24 $</div>
                         <div class="products-item-weight">2 шт./ 200 гр.</div>
                       </div>
-                      <button class="order-button">Заказать</button>
+                      <button class="order-button"  href="#products-formit" >Заказать</button>
                     </div>
                   </div>
              </div>
@@ -125,7 +127,7 @@
                           <div class="products-item-price">20 $</div>
                           <div class="products-item-weight">2 шт./ 200 гр.</div>
                         </div>
-                        <button class="order-button">Заказать</button>
+                        <button class="order-button"  href="#products-formit" >Заказать</button>
                       </div>
                     </div>
              </div>
@@ -142,7 +144,7 @@
                             <div class="products-item-price">18 $</div>
                             <div class="products-item-weight">2 шт./ 200 гр.</div>
                           </div>
-                          <button class="order-button">Заказать</button>
+                          <button class="order-button"  href="#products-formit" >Заказать</button>
                         </div>
                       </div>
              </div>
@@ -151,7 +153,7 @@
       </div>
     </section>
 
-    <section class="products-love">
+    <section class="products-love" id="products-love">
         <div class="products-container">
           <h2  class="common-title"> Пекарня с любовью</h2>
           <div class="products-love-items">
@@ -167,7 +169,7 @@
       </div>
     </section>
 
-    <section class="products-formit">
+    <section class="products-formit" id="products-formit">
       <img src="./images/line3.png" alt="line"  class="line3">
       <div class="products-order">
         <h2 class="common-title">Оформить заказ</h2>
@@ -204,5 +206,18 @@
       </div>
     </footer>
   </main>
+  <script>
+   // Выберите все кнопки "Заказать"
+const orderButtons = document.querySelectorAll('.order-button');
+
+// Добавьте обработчик клика для каждой кнопки
+orderButtons.forEach(button => {
+  button.addEventListener('click', function(event) {
+    event.preventDefault(); // предотвратите стандартное поведение ссылки
+    const productsFormitSection = document.getElementById('products-formit');
+    productsFormitSection.scrollIntoView({ behavior: 'smooth' });
+  });
+});
+  </script>
 </body>
 </html>
